1: Fix picker positioning & overflow issues - Created a hook to manage the position + zIndex of the pickers - Sorted available routers by area IDs

--- a/src/components/router_menu/styles.module.css
+++ b/src/components/router_menu/styles.module.css
@@ -3,9 +3,9 @@
     background-color: #181818;
     color: white;
     position: absolute;
-    overflow: hidden;
-    transition: opacity .25s ease;
-    transition-delay: left .5s;
+    overflow-y: scroll;
+    transition: opacity .25s ease; /* Change Animation duration in component def when changing this */
+    max-height: 50vh;
 }
 
 #container ul {
